Modify Java Basic again.